# website-prompt-challenge

./: .gitignore  README.md  devenv.nix
backend/: README.md  pyproject.toml
backend/src/website_prompt/: cli.py  server.py
backend/src/website_prompt/ai/: openrouter.py  types.py
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  store.ts
frontend/src/components/: MultipleChoice.tsx  UrlInput.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  form.tsx  input.tsx  radio-group.tsx
