[project]
name = "website-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ljyoth", email = "ljyoth@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask-pydantic>=0.12.0",
    "flask>=3.0.3",
    "openai>=1.54.0",
    "pydantic>=2.9.2",
]

[project.scripts]
serve = "website_prompt.server:main"
cli = "website_prompt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "../.devenv/state/venv"
venv = "."

[tool.uv.workspace]
members = ["test", "../test"]
